# instrux

./: .clinerules  AGENTS.md  CODEX.md  Cargo.toml  README.md  build.rs
.cursor/rules/: rule.mdc
.github/: copilot-instructions.md
.github/instructions/: コミットメッセージ.instructions.md  コーディング.instructions.md  ブランチ運用.instructions.md
.github/workflows/: rust.yml
.instrux/: instrux.yaml
.instrux/instructions/: comments.md
.junie/: guidelines.md
issue/: 00-task-list.md  01-cli-interface.md  02-instrux-config-parser.md  03-format-converters.md  04-generator-command.md  05-init-command.md  06-merge-command.md  07-diff-command.md  08-validation-command.md  09-project-structure.md  10-testing.md  11-error-handling.md  12-documentation.md
schema/: instrux.schema.json
src/: diff.rs  main.rs  opts.rs
src/commands/: diff.rs  generate.rs  init.rs  merge.rs  validate.rs
src/formats/: agentsmd.rs  cline.rs  cline_multiple.rs  codex.rs  common.rs  copilot.rs  copilot_multiple.rs  cursor.rs  junie.rs  mod.rs
src/formats/tests/: cline_multiple_tests.rs  cline_tests.rs  common_tests.rs  copilot_multiple_tests.rs  copilot_tests.rs  cursor_tests.rs  junie_tests.rs  mod.rs
src/model/: parser.rs  types.rs
tests/: integration_tests.rs
tests/fixtures/: invalid.yaml  simple.yaml
