[package]
name = "instrux"
version = "0.1.0"
edition = "2024"
description = "Unified Instruction Manager for AI-powered Coding Tools"

[dependencies]
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = true
features = ["run-cargo-fmt", "run-cargo-clippy", "precommit-hook"]
