[package]
name = "instrux"
version = "0.1.0"
edition = "2024"
description = "Unified Instruction Manager for AI-powered Coding Tools"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regress = "0.10.3"
similar = "2.7"
notify = "8.0.0"

[build-dependencies]
serde_json = "1.0"
prettyplease = "0.2.34"
schemars = "0.8"
syn = "2.0.103"
typify = "0.4.2"

[dev-dependencies.cargo-husky]
version = "1"
default-features = true
features = ["run-cargo-fmt", "run-cargo-clippy", "precommit-hook"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
